test: Pruebas de integración #8